# content_inspector

./: Cargo.toml  README.md
examples/: inspect.rs  is_printable.rs
src/: lib.rs
testdata/: create_text_files.py  create_text_files.sh  file_sources.md  text_UTF-16BE-BOM.txt  text_UTF-16LE-BOM.txt  text_UTF-32BE-BOM.txt  text_UTF-32LE-BOM.txt
