[package]
name = "content_inspector"
description = "Fast inspection of binary buffers to guess/determine the encoding"
categories = ["encoding"]
homepage = "https://github.com/sharkdp/content_inspector"
repository = "https://github.com/sharkdp/content_inspector"
keywords = [
    "unicode",
    "encoding",
    "binary",
    "text",
    "library",
]
license = "MIT/Apache-2.0"
version = "0.2.4"
readme = "README.md"
authors = ["David Peter <mail@david-peter.de>"]

[dependencies]
memchr = "2"
